// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return 1 expense if no 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should return 2 expenses if multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $2.35
  </h1>
</div>
`;
